you can now delete stokers

--- a/web/app/views/stokers/show.html.erb
+++ b/web/app/views/stokers/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <%= link_to "Edit", edit_stoker_path(@stoker) %> |
-  <%= link_to "Delete", stoker_path(@stoker), :method => :destroy, :confirm => "Are you sure?" %> | 
+  <%= link_to "Delete", stoker_path(@stoker), :method => :delete, :confirm => "Are you sure?" %> | 
   <%= link_to_remote "Sync", :url => sync_stoker_path(@stoker), :method => :put, :before => "$('sensors_spinner').show()", :complete => "$('sensors_spinner').hide()" %>
   <%#= link_to "Sync Plain", sync_stoker_path(@stoker), :method => :put %>
   <%= spinner("sensors_spinner") %>
