style changes, adding tracking of cook adjustments (incomplete), started support for multiple simultaneous cooks per stoker...

--- a/web/app/views/blowers/index.html.erb
+++ b/web/app/views/blowers/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Listing Blowers</h2>
 
-<p><%= link_to '+ Add New Blower', new_blower_path %></p>
+<p><%= link_to image_tag("add.png") + ' Add New Blower', new_blower_path %></p>
 
 <% @blowers.each do |blower| -%>
   <p>
