--- a/web/app/views/cooks/index.html.erb
+++ b/web/app/views/cooks/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Listing Cooks</h2>
 
-<p><%= link_to '+ Add New Cook', new_cook_path %></p>
+<p><%= link_to image_tag("add.png") + ' Add New Cook', new_cook_path %></p>
 
 <% @cooks.each do |cook| -%>
   <p>
