--- a/web/app/views/cooks/show.html.erb
+++ b/web/app/views/cooks/show.html.erb
@@ -1,8 +1,9 @@
 <h2><%=h @cook.name %></h2>
 
+<%= link_to image_tag('delete.png') + ' Delete', @cook, :confirm => 'Are you sure?', :method => :delete, :style => "float:right;" %>
+
 <p>
-  <%= link_to 'Edit', edit_cook_path(@cook) %> |
-  <%= link_to 'Delete', @cook, :confirm => 'Are you sure?', :method => :delete %> | 
+  <%= link_to image_tag("pencil.png") + " Edit", edit_cook_path(@cook) %> |
   <%= cook_status(@cook) %>
   <% if @cook.running? -%>
     <%= link_to "Stop", stop_cook_path(@cook), :method => :put %>
@@ -15,6 +16,11 @@
   <%= distance_of_time_in_words(@cook.start_time, @cook.end_time || Time.now) %>
 </p>
 
+<% if @cook.running? -%>
+  <%= render :partial => "/sensors/list", :locals => {:sensors => @cook.sensors, :cook => @cook} %>
+  <br/>
+<% end -%>
+
 <% form_tag cook_path(@cook), :method => :get do %>
   <%= radio_button_tag :range, "last", params[:range] == "last", :onclick => "$('range_select').hide();" %> Last <%= text_field_tag :hours, params[:hours], :size => "2", :maxlength => "2" %> Hours
   <%= radio_button_tag :range, "all", params[:range] == "all", :onclick => "$('range_select').hide();" %> All
@@ -24,7 +30,7 @@
 
   <p id="range_select" style="<%= params[:range] == "range" ? "" : "display:none" %>">
     <%= select_datetime params[:start_time].to_time, :prefix => "start" %><br/>
-    <%= select_datetime params[:end_time].to_time, :prefix => "end" %>
+    <%= select_datetime params[:end_time].try(:to_time), :prefix => "end" %>
   </p>
 <% end %>
 
