--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,7 +1,9 @@
 <h2><%=h @event.sensor.name %> Event</h2>
 
+<%= link_to image_tag("delete.png") + ' Delete', @event, :confirm => 'Are you sure?', :method => :delete, :style => "float:right;" %>
+
 <p>
-  <%= link_to 'Edit', edit_event_path(@event) %>
+  <%= link_to image_tag("pencil.png") + ' Edit', edit_event_path(@event) %>
 </p>
 
 <p>
