--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -22,12 +22,12 @@
     </div>
 
     <div id="menu">
-      <%= link_to "About", about_page_path, :class => "about" %>
       <%= link_to "Stokers", stokers_path %>
       <%= link_to "Blowers", blowers_path %>
       <%= link_to "Sensors", sensors_path %>
       <%= link_to "Events", events_path %>
       <%= link_to "Cooks", cooks_path %>
+      <%= link_to "About", about_page_path %>
     </div>
 
     <% for name in [:notice, :warning, :message] -%>
