--- a/web/app/views/sensors/show.html.erb
+++ b/web/app/views/sensors/show.html.erb
@@ -1,8 +1,9 @@
 <h2><%= @sensor.name %></h2>
 
+<%= link_to image_tag("delete.png") + ' Delete', @sensor, :confirm => 'Are you sure?', :method => :delete, :style => "float:right;" %>
+
 <p>
-  <%= link_to 'Edit', edit_sensor_path(@sensor) %> |
-  <%= link_to 'Delete', @sensor, :confirm => 'Are you sure?', :method => :delete %>
+  <%= link_to image_tag("pencil.png") + ' Edit', edit_sensor_path(@sensor) %>
 </p>
 
 <p>
