--- a/web/app/views/stokers/index.html.erb
+++ b/web/app/views/stokers/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Listing Stokers</h2>
 
-<p><%= link_to '+ Add New Stoker', new_stoker_path %></p>
+<p><%= link_to image_tag("add.png") + ' Add New Stoker', new_stoker_path %></p>
 
 <% for stoker in @stokers %>
   <p>
