--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <%= javascript_include_tag 'flotr.debug-0.1.0alpha' %>
   <%= javascript_include_tag 'canvas2image' %>
   <%= javascript_include_tag 'base64' %>
+  <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    _uacct = "UA-4835027-1";
+    urchinTracker();
+  </script>
 </head>
 <body>
 
