--- a/web/app/views/layouts/application.iphone.erb
+++ b/web/app/views/layouts/application.iphone.erb
@@ -10,11 +10,13 @@
   <%= javascript_include_tag 'iui_eval' %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'flotr.debug-0.1.0alpha' %>
-  <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    _uacct = "UA-4835027-1";
-    urchinTracker();
-  </script>  
+  <% if STOKER_CONFIG[:google_analytics_uacct].to_s != "" -%>
+    <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      _uacct = "<%= STOKER_CONFIG[:google_analytics_uacct] %>";
+      urchinTracker();
+    </script>
+  <% end -%>
 </head>
 <body>
 
