added code to more gracefully handle physical removal of sensors/blowers to prevent you from selecting something that isn't connected anymore added code to ignore http response when changing sensor settings since the built in http server sometimes responds with invalid http headers (the internal telnet output sometimes bleeds through to the webpage)

--- a/web/app/views/sensors/_form.html.erb
+++ b/web/app/views/sensors/_form.html.erb
@@ -31,10 +31,18 @@
   <%= f.text_field :high %>
 </p>
 
-<p>
-  <b>Blower</b><br />
-  <%= f.collection_select :blower_id, Blower.find(:all), :id, :name, {:include_blank => true} %>
-</p>
+<% if @sensor.stoker -%>
+  <% if @sensor.stoker.blowers.size > 0 -%>
+    <p>
+      <b>Blower</b><br />
+      <%= f.collection_select :blower_id, @sensor.stoker.blowers.find(:all), :id, :name, {:include_blank => true} %>
+    </p>
+  <% else -%>
+    <p class="warning">There are no blowers connected to this stoker.</p>
+  <% end -%>
+<% else -%>
+  <p class="warning">Cannot set blower, this sensor is not connected to a stoker.</p>
+<% end -%>
 
 <p>
   <b>Stoker</b><br />
