--- a/web/app/views/blowers/_form.html.erb
+++ b/web/app/views/blowers/_form.html.erb
@@ -10,12 +10,16 @@
   <%= f.text_field :name %>
 </p>
 
-<p>
-  <b>Sensor</b><br />
-  <%= f.collection_select :sensor_id, Sensor.find(:all), :id, :name, {:include_blank => true} %>
-</p>
+<% if @blower.stoker -%>
+  <p>
+    <b>Sensor</b><br />
+    <%= f.collection_select :sensor_id, @blower.stoker.sensors.find(:all), :id, :name, {:include_blank => true} %>
+  </p>
+<% else -%>
+  <p class="warning">Cannot set sensor, this blower is not connected to a stoker.</p>
+<% end -%>
 
 <p>
   <b>Stoker</b><br />
-  <%= f.collection_select :stoker_id, Stoker.find(:all), :id, :name %>
+  <%= f.collection_select :stoker_id, Stoker.find(:all), :id, :name, {:include_blank => true} %>
 </p>
