--- a/web/app/views/layouts/application.iphone.erb
+++ b/web/app/views/layouts/application.iphone.erb
@@ -2,6 +2,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
+  <% if @refresh -%>
+    <meta http-equiv="refresh" content="60">
+  <% end -%>  
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
   <title>Stoker Web</title>
