--- a/web/app/views/adjustments/new.html.erb
+++ b/web/app/views/adjustments/new.html.erb
@@ -1,43 +1,10 @@
-<h1>New adjustment</h1>
+<h2>New Adjustment for <%= @adjustment.sensor.name %></h2>
 
-<% form_for(@adjustment) do |f| %>
-  <%= f.error_messages %>
+<% form_for([@cook, @adjustment]) do |f| %>
+  <%= render :partial => "form", :locals => {:f => f} %>
 
-  <p>
-    <%= f.label :cook_id %><br />
-    <%= f.text_field :cook_id %>
-  </p>
-  <p>
-    <%= f.label :sensor_id %><br />
-    <%= f.text_field :sensor_id %>
-  </p>
-  <p>
-    <%= f.label :target %><br />
-    <%= f.text_field :target %>
-  </p>
-  <p>
-    <%= f.label :alarm %><br />
-    <%= f.text_field :alarm %>
-  </p>
-  <p>
-    <%= f.label :low %><br />
-    <%= f.text_field :low %>
-  </p>
-  <p>
-    <%= f.label :high %><br />
-    <%= f.text_field :high %>
-  </p>
-  <p>
-    <%= f.label :blower_id %><br />
-    <%= f.text_field :blower_id %>
-  </p>
-  <p>
-    <%= f.label :note %><br />
-    <%= f.text_area :note %>
-  </p>
   <p>
     <%= f.submit "Create" %>
+    <%= link_to "Cancel", cook_path(@cook) %>
   </p>
 <% end %>
-
-<%= link_to 'Back', adjustments_path %>
