fixed a css error

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
     <% end -%>
 
     <% if Cook.active.size > 0 -%>
-      <div id="message" class="alert">
+      <div id="active_cooks" class="alert">
         Active Cooks:
         <%= Cook.active.collect{|cook| link_to cook.name, cook }.join(", ") %>
       </div>
