added audible alarms on all pages added ability to mute alarms added a blinking red dot next to the active cook that is alarming to the Active Cooks list at the top of every page

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
 
   <div id="wrapper">
     <div id="header">
+      <span id="alarm_sound"><%= alarm_sound %></span>
       <h1>Stoker Web</h1>
     </div>
 
@@ -48,7 +49,7 @@
     <% if Cook.active.size > 0 -%>
       <div id="active_cooks" class="alert">
         Active Cooks:
-        <%= Cook.active.collect{|cook| link_to cook.name, cook }.join(", ") %>
+        <%= Cook.active.collect{|cook| (cook.alarm? ? image_tag('alarm.gif') : "") + link_to(cook.name, cook)}.join(", ") %>
       </div>
     <% end -%>
     
